SuperRenderUpdate